--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 		<meta name="description" content="">
 		<meta name="keywords" content="">
 		<meta name="format-detection" content="telephone=no">
-		<link type="text/css" rel="stylesheet" href="./js/slick/slick-theme.css">
-		<link type="text/css" rel="stylesheet" href="./js/slick/slick.css">
 		<link type="text/css" rel="stylesheet" href="./css/styles.css">
 	</head>
 	<body>
@@ -18,6 +16,9 @@
 				<img src="./img/logo.png" alt="Võ Hiệp Truyền Kỳ">
 			</a>
 			<nav class="header-nav">
+				<div class="header-nav__logo sp">
+					<img src="./img/logo.png" alt="Võ Hiệp Truyền Kỳ">
+				</div>
 				<ul class="header-nav__menu">
 					<li class="header-nav__menu-item">
 						<a href="" class="c-btn__img">
@@ -63,77 +64,278 @@
 					<ul class="content-nav__menu">
 						<li class="content-nav__menu-item">
 							<a href="" class="c-btn__img">
-								<img src="./img/nav-01.png" alt="trang chủ" class="img-01">
-								<img src="./img/nav-01-hv.png" alt="trang chủ" class="img-02">
+								<img src="./img/nav-01.png" alt="trang chủ" class="img-01 pc">
+								<img src="./img/nav-01-sp.png" alt="trang chủ" class="img-01 sp">
+								<img src="./img/nav-01-hv.png" alt="trang chủ" class="img-02 pc">
+								<img src="./img/nav-01-sp-hv.png" alt="trang chủ" class="img-02 sp">
 							</a>
 						</li>
 						<li class="content-nav__menu-item">
 							<a href="" class="c-btn__img">
-								<img src="./img/nav-02.png" alt="trang chủ" class="img-01">
-								<img src="./img/nav-02-hv.png" alt="trang chủ" class="img-02">
+								<img src="./img/nav-02.png" alt="trang chủ" class="img-01 pc">
+								<img src="./img/nav-02-sp.png" alt="trang chủ" class="img-01 sp">
+								<img src="./img/nav-02-hv.png" alt="trang chủ" class="img-02 pc">
+								<img src="./img/nav-02-sp-hv.png" alt="trang chủ" class="img-02 sp">
 							</a>
 						</li>
 						<li class="content-nav__menu-item">
-							<a href="./product.html" class="c-btn__img active">
-								<img src="./img/nav-03.png" alt="trang chủ" class="img-01">
-								<img src="./img/nav-03-hv.png" alt="trang chủ" class="img-02">
+							<a href="./product.html#content-show" class="c-btn__img">
+								<img src="./img/nav-03.png" alt="trang chủ" class="img-01 pc">
+								<img src="./img/nav-03-sp.png" alt="trang chủ" class="img-01 sp">
+								<img src="./img/nav-03-hv.png" alt="trang chủ" class="img-02 pc">
+								<img src="./img/nav-03-sp-hv.png" alt="trang chủ" class="img-02 sp">
 							</a>
 						</li>
 						<li class="content-nav__menu-item">
 							<a href="" class="c-btn__img">
-								<img src="./img/nav-04.png" alt="trang chủ" class="img-01">
-								<img src="./img/nav-04-hv.png" alt="trang chủ" class="img-02">
+								<img src="./img/nav-04.png" alt="trang chủ" class="img-01 pc">
+								<img src="./img/nav-04-sp.png" alt="trang chủ" class="img-01 sp">
+								<img src="./img/nav-04-hv.png" alt="trang chủ" class="img-02 pc">
+								<img src="./img/nav-04-sp-hv.png" alt="trang chủ" class="img-02 sp">
 							</a>
 						</li>
 						<li class="content-nav__menu-item">
-							<a href="./" class="c-btn__img">
-								<img src="./img/nav-05.png" alt="trang chủ" class="img-01">
-								<img src="./img/nav-05-hv.png" alt="trang chủ" class="img-02">
+							<a href="./#content-show" class="c-btn__img active">
+								<img src="./img/nav-05.png" alt="trang chủ" class="img-01 pc">
+								<img src="./img/nav-05-sp.png" alt="trang chủ" class="img-01 sp">
+								<img src="./img/nav-05-hv.png" alt="trang chủ" class="img-02 pc">
+								<img src="./img/nav-05-sp-hv.png" alt="trang chủ" class="img-02 sp">
 							</a>
 						</li>
 					</ul>
 				</nav>
-				<div class="content-show">
+				<div class="content-show" id="content-show">
 					<div class="content-show__block">
-						<a href="" class="c-btn__back c-btn__img">
-							<img src="./img/btn-back.png" alt="trang chủ" class="img-01">
-							<img src="./img/btn-back-hv.png" alt="trang chủ" class="img-02">
-						</a>
 						<div class="content-show__block-custom">
 							<h2 class="content-show__block-ttl">
 								<img src="./img/ttl-01.png" alt="tin tức">
+								<span class="content-show__block-ttl-number">05</span>
 							</h2>
-							<div class="content-show__article">
-								<div class="content-show__article-heading">
-									<p> Để giúp quý nhân sĩ võ lâm thuận tiện hơn trong việc theo dõi và tham gia giải đấu, Ban Tổ Chức (BTC) xin gửi đến nhân sĩ thể lệ thi đấu Bang Hội Tinh Anh (BHTA) 33. Mời quý nhân sĩ cùng xem qua. </p>
-								</div>
-								<h3>Quy định chung</h3>
-								<h4>Đối tượng, phạm vi áp dụng</h4>
-								<ul>
-									<li>Thể Lệ Thi Đấu Giải Đấu Bang Hội Tinh Anh 33 (“Thể Lệ”) này áp dụng đối với toàn bộ người chơi trò chơi điện tử trên mạng Võ Lâm Truyền Kỳ 2 (“Trò Chơi”) đăng ký tham gia Giải Đấu Bang Hội Tinh Anh 33 (“Giải Đấu”).</li>
-									<li>Thể Lệ này áp dụng cho toàn bộ các vòng thi đấu của Giải Đấu, bao gồm nhưng không giới hạn ở Vòng Loại và Vòng Chung Kết.</li>
-								</ul>
-								<h4>Điều kiện tham gia giải đấu</h4>
-								<ul>
-									<li>Bang Hội đăng ký tham gia Giải Đấu tại các cụm máy chủ trong thời gian quy định và toàn bộ thành viên của Bang Hội đồng ý với toàn bộ các điều khoản, điều kiện của Thể Lệ này và các bản sửa đổi, bổ sung tùy từng thời điểm.</li>
-									<li>Tài khoản Bang Chủ của Bang Hội tham gia Giải Đấu phải là tài khoản đã được định danh theo đúng quy định tại Điều khoản sử dụng của Trò Chơi (tài khoản Zing ID).</li>
-									<li> Bang Hội và các thành viên của Bang Hội phải tuân thủ đầy đủ quy định của Điều khoản sử dụng của Trò Chơi; trường hợp các thành viên trong Bang Hội nắm giữ các chức danh như Bang Chủ vi phạm Điều khoản sử dụng của Trò Chơi, bị khóa tài khoản dẫn đến việc Bang Hội không thể báo danh, sử dụng tính năng trong Trò Chơi để tham gia các trận đấu trong Giải Đấu thì Bang Hội đó sẽ bị loại.<br> Trường hợp Ban Tổ Chức Giải Đấu phát hiện bất kỳ tài khoản, người chơi, Bang Hội nào không đáp ứng các điều kiện nêu trên thì Ban Tổ Chức sẽ ngay lập tức loại người chơi, Bang Hội đó ra khỏi Giải Đấu, toàn bộ thành tích, phần thưởng, và bất kỳ lợi ích nào (nếu có) liên quan đến Giải Đấu của Bang Hội đó sẽ bị hủy bỏ. </li>
-								</ul>
-								<h3>Loại Hình Thi Đấu</h3>
-								<p> Giải Đấu gồm hai (02) vòng đấu: Vòng Loại và Vòng Chung Kết, cụ thể như sau: </p>
-								<h4>Vòng Loại</h4>
-								<ul>
-									<li>Thời gian bang hội bắt đầu đăng ký báo danh tham gia vòng server BHTA 33: Ngày 09/05/2025 → 24h ngày 14/05/2025</li>
-								</ul>
-							</div>
+							<ul class="content-show__news">
+								<li class="content-show__news-item">
+									<a href="./detail.html#content-show">
+										<div class="content-show__news-img">
+											<img src="./img/img-01.jpg" alt="trang chủ">
+										</div>
+										<div class="content-show__news-ct">
+											<h3 class="content-show__news-ct-ttl">Cập nhật điều kiện tham gia 3vs3 & Boss Liên Server</h3>
+											<p> Liên quan đến tính năng 3vs3 Liên Server và Săn Boss Liên Server, Võ Lâm Truyền Kỳ II sẽ cập nhật điều kiện tham gia 3vs3 Liên Server và Săn Boss Liên Server. </p>
+											<div class="content-show__news-ct-option">
+												<time>15/10/2025</time>
+												<span class="c-btn__img">
+													<img src="./img/btn-xem.png" alt="xem" class="img-01">
+													<img src="./img/btn-xem-hv.png" alt="xem" class="img-02">
+												</span>
+											</div>
+										</div>
+									</a>
+								</li>
+								<li class="content-show__news-item">
+									<a href="./detail.html#content-show">
+										<div class="content-show__news-img">
+											<img src="./img/img-01.jpg" alt="trang chủ">
+										</div>
+										<div class="content-show__news-ct">
+											<h3 class="content-show__news-ct-ttl">Cập nhật điều kiện tham gia 3vs3 & Boss Liên Server</h3>
+											<p> Liên quan đến tính năng 3vs3 Liên Server và Săn Boss Liên Server, Võ Lâm Truyền Kỳ II sẽ cập nhật điều kiện tham gia 3vs3 Liên Server và Săn Boss Liên Server. </p>
+											<div class="content-show__news-ct-option">
+												<time>15/10/2025</time>
+												<span class="c-btn__img">
+													<img src="./img/btn-xem.png" alt="xem" class="img-01">
+													<img src="./img/btn-xem-hv.png" alt="xem" class="img-02">
+												</span>
+											</div>
+										</div>
+									</a>
+								</li>
+								<li class="content-show__news-item">
+									<a href="./detail.html#content-show">
+										<div class="content-show__news-img">
+											<img src="./img/img-01.jpg" alt="trang chủ">
+										</div>
+										<div class="content-show__news-ct">
+											<h3 class="content-show__news-ct-ttl">Cập nhật điều kiện tham gia 3vs3 & Boss Liên Server</h3>
+											<p> Liên quan đến tính năng 3vs3 Liên Server và Săn Boss Liên Server, Võ Lâm Truyền Kỳ II sẽ cập nhật điều kiện tham gia 3vs3 Liên Server và Săn Boss Liên Server. </p>
+											<div class="content-show__news-ct-option">
+												<time>15/10/2025</time>
+												<span class="c-btn__img">
+													<img src="./img/btn-xem.png" alt="xem" class="img-01">
+													<img src="./img/btn-xem-hv.png" alt="xem" class="img-02">
+												</span>
+											</div>
+										</div>
+									</a>
+								</li>
+								<li class="content-show__news-item">
+									<a href="./detail.html#content-show">
+										<div class="content-show__news-img">
+											<img src="./img/img-01.jpg" alt="trang chủ">
+										</div>
+										<div class="content-show__news-ct">
+											<h3 class="content-show__news-ct-ttl">Cập nhật điều kiện tham gia 3vs3 & Boss Liên Server</h3>
+											<p> Liên quan đến tính năng 3vs3 Liên Server và Săn Boss Liên Server, Võ Lâm Truyền Kỳ II sẽ cập nhật điều kiện tham gia 3vs3 Liên Server và Săn Boss Liên Server. </p>
+											<div class="content-show__news-ct-option">
+												<time>15/10/2025</time>
+												<span class="c-btn__img">
+													<img src="./img/btn-xem.png" alt="xem" class="img-01">
+													<img src="./img/btn-xem-hv.png" alt="xem" class="img-02">
+												</span>
+											</div>
+										</div>
+									</a>
+								</li>
+								<li class="content-show__news-item">
+									<a href="./detail.html#content-show">
+										<div class="content-show__news-img">
+											<img src="./img/img-01.jpg" alt="trang chủ">
+										</div>
+										<div class="content-show__news-ct">
+											<h3 class="content-show__news-ct-ttl">Cập nhật điều kiện tham gia 3vs3 & Boss Liên Server</h3>
+											<p> Liên quan đến tính năng 3vs3 Liên Server và Săn Boss Liên Server, Võ Lâm Truyền Kỳ II sẽ cập nhật điều kiện tham gia 3vs3 Liên Server và Săn Boss Liên Server. </p>
+											<div class="content-show__news-ct-option">
+												<time>15/10/2025</time>
+												<span class="c-btn__img">
+													<img src="./img/btn-xem.png" alt="xem" class="img-01">
+													<img src="./img/btn-xem-hv.png" alt="xem" class="img-02">
+												</span>
+											</div>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<ul class="pagination">
+								<li>
+									<a href="" class="disabled pagination-prev__all">
+										<img src="./img/prev-02.png" alt="img">
+									</a>
+								</li>
+								<li>
+									<a href="" class="disabled pagination-prev__page">
+										<img src="./img/prev-01.png" alt="img">
+									</a>
+								</li>
+								<li>
+									<a href="" class="active">1</a>
+								</li>
+								<li>
+									<a href="">2</a>
+								</li>
+								<li>
+									<a href="">3</a>
+								</li>
+								<li>
+									<a href="" class="pagination-next__page">
+										<img src="./img/next-01.png" alt="img">
+									</a>
+								</li>
+								<li>
+									<a href="" class="pagination-next__all">
+										<img src="./img/next-02.png" alt="img">
+									</a>
+								</li>
+							</ul>
 						</div>
 					</div>
 				</div>
 			</section>
 		</main>
-		<footer id="footer" style="background: #0f172a; height: 500px; color: white">
-			<div class="footer-note">
-				<p> điều khoản sử dụng | cài đặt và gỡ bỏ<br> chơi game quá 180 phút có hại cho sức khỏe </p>
+		<footer id="footer" class="game-footer">
+			<div class="container">
+				<div class="footer-grid">
+					<div class="company-section">
+						<div class="logo-container">
+							<div class="logo"><a href="https://3cgame.vn" target="_blank"><img src="./img/3cgame_logo.png" alt="3C Technology Logo"></a></div>
+						</div>
+						<p class="company-description">Công ty hàng đầu trong lĩnh vực phát triển và cung cấp dịch vụ trò chơi điện tử tại Việt Nam.</p>
+					</div>
+					<div class="details-section">
+						<h4>
+							<svg viewBox="0 0 24 24" class="icon icon-shield">
+								<path d="M12 1l9 4v6c0 5.55-3.84 10.74-9 12-5.16-1.26-9-6.45-9-12V5l9-4z"></path>
+							</svg> Thông tin công ty </h4>
+						<div class="details-card">
+							<h5 class="company-title">CÔNG TY CỔ PHẦN CÔNG NGHỆ SỐ 3C</h5>
+							<div class="license-info">
+								<svg viewBox="0 0 24 24" class="icon icon-file license-icon">
+									<path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+									<polyline points="14,2 14,8 20,8"></polyline>
+									<line x1="16" y1="13" x2="8" y2="13"></line>
+									<line x1="16" y1="17" x2="8" y2="17"></line>
+									<polyline points="10,9 9,9 8,9"></polyline>
+								</svg>
+								<div class="license-content">
+									<p class="license-title">Giấy phép G1:</p>
+									<p>Số 362/GP-BTTTT do Bộ Thông tin và Truyền thông cấp ngày 03/12/2024</p>
+								</div>
+							</div>
+							<div class="license-info">
+								<svg viewBox="0 0 24 24" class="icon icon-calendar license-icon">
+									<rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+									<line x1="16" y1="2" x2="16" y2="6"></line>
+									<line x1="8" y1="2" x2="8" y2="6"></line>
+									<line x1="3" y1="10" x2="21" y2="10"></line>
+								</svg>
+								<div class="license-content">
+									<p class="license-title">Quyết định phê duyệt:</p>
+									<p>Nội dung kịch bản trò chơi Võ Hiệp Truyền Kỳ 2 số 313/QĐ-PTTH&amp;TTĐT ngày 10/07/2025</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="contact-section">
+						<h4>Thông tin liên hệ</h4>
+						<div class="contact-item">
+							<svg viewBox="0 0 24 24" class="icon icon-phone contact-icon">
+								<path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
+							</svg>
+							<div class="contact-content">
+								<p class="contact-title">Hotline</p><a href="tel:19001168" class="hotline-link">19001168</a>
+							</div>
+						</div>
+						<div class="contact-item">
+							<svg viewBox="0 0 24 24" class="icon icon-map contact-icon">
+								<path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+								<circle cx="12" cy="10" r="3"></circle>
+							</svg>
+							<div class="contact-content">
+								<p class="contact-title">Địa chỉ trụ sở chính</p>
+								<p class="contact-text">TT3-6 Khu đô thị mới Đại Kim, Phường Đại Kim, Quận Hoàng Mai, Thành phố Hà Nội, Việt Nam</p>
+							</div>
+						</div>
+						<div class="contact-item">
+							<svg viewBox="0 0 24 24" class="icon icon-user contact-icon">
+								<path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+								<circle cx="12" cy="7" r="4"></circle>
+							</svg>
+							<div class="contact-content">
+								<p class="contact-title">Người chịu trách nhiệm</p>
+								<p class="contact-text">Hoàng Thế Công</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="separator"></div>
+				<div class="bottom-footer">
+					<div class="footer-links">
+						<p>© 2025 Công ty Cổ phần Công nghệ Số 3C. All rights reserved.</p>
+						<div class="footer-nav"><a href="https://3cgame.vn/policy" target="_blank">
+								<svg viewBox="0 0 24 24" class="icon">
+									<path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+									<polyline points="14,2 14,8 20,8"></polyline>
+									<line x1="16" y1="13" x2="8" y2="13"></line>
+									<line x1="16" y1="17" x2="8" y2="17"></line>
+									<polyline points="10,9 9,9 8,9"></polyline>
+								</svg> Điều khoản trò chơi</a><a href="https://3cgame.vn/privacy" target="_blank">Chính sách bảo mật</a></div>
+					</div>
+					<button class="support-button">Hỗ trợ khách hàng</button>
+				</div>
+				<div class="age-notice">
+					<div class="age-badge">18+</div>
+					<div class="age-content">
+						<p class="age-title">Cảnh báo độ tuổi</p>
+						<p class="age-text">Game dành cho 18 tuổi trở lên. Chơi quá 180 phút mỗi ngày sẽ ảnh hưởng xấu tới sức khoẻ.</p>
+					</div>
+				</div>
 			</div>
 		</footer>
 		<div class="float-right">
@@ -214,9 +416,6 @@
 			</a>
 		</div>
 		<script src="./js/jquery-3.6.0.min.js"></script>
-		<script src="./js/slick/slick.min.js"></script>
-		<script src="./js/jquery.matchHeight-min.js"></script>
-		<script src="./js/jquery.slimscroll.min.js"></script>
 		<script src="./js/setting.js"></script>
 	</body>
 </html>
