--- a/detail.html
+++ b/detail.html
@@ -52,7 +52,7 @@
 				<span></span>
 			</span>
 		</header>
-		<main class="page-product">
+		<main class="page-detail">
 			<section class="sec-mv">
 				<div class="mv-video">
 					<video class="pc" src="./img/pc.mp4" loop autoplay muted webkit-playsinline playsinline></video>
@@ -79,7 +79,7 @@
 							</a>
 						</li>
 						<li class="content-nav__menu-item">
-							<a href="./product.html#content-show" class="c-btn__img active">
+							<a href="./product.html#content-show" class="c-btn__img">
 								<img src="./img/nav-03.png" alt="trang chủ" class="img-01 pc">
 								<img src="./img/nav-03-sp.png" alt="trang chủ" class="img-01 sp">
 								<img src="./img/nav-03-hv.png" alt="trang chủ" class="img-02 pc">
@@ -95,7 +95,7 @@
 							</a>
 						</li>
 						<li class="content-nav__menu-item">
-							<a href="./#content-show" class="c-btn__img">
+							<a href="./#content-show" class="c-btn__img active">
 								<img src="./img/nav-05.png" alt="trang chủ" class="img-01 pc">
 								<img src="./img/nav-05-sp.png" alt="trang chủ" class="img-01 sp">
 								<img src="./img/nav-05-hv.png" alt="trang chủ" class="img-02 pc">
@@ -106,56 +106,37 @@
 				</nav>
 				<div class="content-show" id="content-show">
 					<div class="content-show__block">
+						<a href="" class="c-btn__back c-btn__img">
+							<img src="./img/btn-back.png" alt="trang chủ" class="img-01">
+							<img src="./img/btn-back-hv.png" alt="trang chủ" class="img-02">
+						</a>
 						<div class="content-show__block-custom">
 							<h2 class="content-show__block-ttl">
-								<img src="./img/ttl-02.png" alt="phần thưởng">
-								<span class="content-show__block-ttl-number">03</span>
+								<img src="./img/ttl-01.png" alt="tin tức">
+								<span class="content-show__block-ttl-number">05</span>
 							</h2>
-							<div class="content-show__product">
-								<div class="content-show__product-item">
-									<h3 class="content-show__product-ttl"><span>Hạng 1</span></h3>
-									<ul class="content-show__product-list">
-										<li class="content-show__product-list-item">
-											<img src="./img/gift-01.png" alt="img">
-										</li>
-										<li class="content-show__product-list-item">
-											<img src="./img/gift-02.png" alt="img">
-										</li>
-										<li class="content-show__product-list-item">
-											<img src="./img/gift-03.png" alt="img">
-										</li>
-										<li class="content-show__product-list-item">
-											<img src="./img/gift-04.png" alt="img">
-										</li>
-										<li class="content-show__product-list-item">
-											<img src="./img/gift-05.png" alt="img">
-										</li>
-									</ul>
-									<p> x2 Bộ trang bị Chiến Khí Sát Thần +0<br> x2 Bộ trang bị Thiên Dực Tướng Quân +0 ( bao gồm vũ khí)<br> x2 cặp nhẫn Quỷ Thiên - Địa Sát)<br> x66 Thiên Môn Kim Lệnh<br> x66 Thiên Cang Lệnh<br>
-									</p>
+							<div class="content-show__article">
+								<div class="content-show__article-heading">
+									<p> Để giúp quý nhân sĩ võ lâm thuận tiện hơn trong việc theo dõi và tham gia giải đấu, Ban Tổ Chức (BTC) xin gửi đến nhân sĩ thể lệ thi đấu Bang Hội Tinh Anh (BHTA) 33. Mời quý nhân sĩ cùng xem qua. </p>
 								</div>
-								<div class="content-show__product-item">
-									<h3 class="content-show__product-ttl"><span>Hạng 2</span></h3>
-									<ul class="content-show__product-list">
-										<li class="content-show__product-list-item">
-											<img src="./img/gift-01.png" alt="img">
-										</li>
-										<li class="content-show__product-list-item">
-											<img src="./img/gift-02.png" alt="img">
-										</li>
-										<li class="content-show__product-list-item">
-											<img src="./img/gift-03.png" alt="img">
-										</li>
-										<li class="content-show__product-list-item">
-											<img src="./img/gift-04.png" alt="img">
-										</li>
-										<li class="content-show__product-list-item">
-											<img src="./img/gift-05.png" alt="img">
-										</li>
-									</ul>
-									<p> x2 Bộ trang bị Chiến Khí Sát Thần +0<br> x2 Bộ trang bị Thiên Dực Tướng Quân +0 ( bao gồm vũ khí)<br> x2 cặp nhẫn Quỷ Thiên - Địa Sát)<br> x66 Thiên Môn Kim Lệnh<br> x66 Thiên Cang Lệnh<br>
-									</p>
-								</div>
+								<h3>Quy định chung</h3>
+								<h4>Đối tượng, phạm vi áp dụng</h4>
+								<ul>
+									<li>Thể Lệ Thi Đấu Giải Đấu Bang Hội Tinh Anh 33 (“Thể Lệ”) này áp dụng đối với toàn bộ người chơi trò chơi điện tử trên mạng Võ Lâm Truyền Kỳ 2 (“Trò Chơi”) đăng ký tham gia Giải Đấu Bang Hội Tinh Anh 33 (“Giải Đấu”).</li>
+									<li>Thể Lệ này áp dụng cho toàn bộ các vòng thi đấu của Giải Đấu, bao gồm nhưng không giới hạn ở Vòng Loại và Vòng Chung Kết.</li>
+								</ul>
+								<h4>Điều kiện tham gia giải đấu</h4>
+								<ul>
+									<li>Bang Hội đăng ký tham gia Giải Đấu tại các cụm máy chủ trong thời gian quy định và toàn bộ thành viên của Bang Hội đồng ý với toàn bộ các điều khoản, điều kiện của Thể Lệ này và các bản sửa đổi, bổ sung tùy từng thời điểm.</li>
+									<li>Tài khoản Bang Chủ của Bang Hội tham gia Giải Đấu phải là tài khoản đã được định danh theo đúng quy định tại Điều khoản sử dụng của Trò Chơi (tài khoản Zing ID).</li>
+									<li> Bang Hội và các thành viên của Bang Hội phải tuân thủ đầy đủ quy định của Điều khoản sử dụng của Trò Chơi; trường hợp các thành viên trong Bang Hội nắm giữ các chức danh như Bang Chủ vi phạm Điều khoản sử dụng của Trò Chơi, bị khóa tài khoản dẫn đến việc Bang Hội không thể báo danh, sử dụng tính năng trong Trò Chơi để tham gia các trận đấu trong Giải Đấu thì Bang Hội đó sẽ bị loại.<br> Trường hợp Ban Tổ Chức Giải Đấu phát hiện bất kỳ tài khoản, người chơi, Bang Hội nào không đáp ứng các điều kiện nêu trên thì Ban Tổ Chức sẽ ngay lập tức loại người chơi, Bang Hội đó ra khỏi Giải Đấu, toàn bộ thành tích, phần thưởng, và bất kỳ lợi ích nào (nếu có) liên quan đến Giải Đấu của Bang Hội đó sẽ bị hủy bỏ. </li>
+								</ul>
+								<h3>Loại Hình Thi Đấu</h3>
+								<p> Giải Đấu gồm hai (02) vòng đấu: Vòng Loại và Vòng Chung Kết, cụ thể như sau: </p>
+								<h4>Vòng Loại</h4>
+								<ul>
+									<li>Thời gian bang hội bắt đầu đăng ký báo danh tham gia vòng server BHTA 33: Ngày 09/05/2025 → 24h ngày 14/05/2025</li>
+								</ul>
 							</div>
 						</div>
 					</div>
